* Fix some layout issues.

--- a/client/src/app/general/general.component.scss
+++ b/client/src/app/general/general.component.scss
@@ -1,9 +1,9 @@
-div.master-volume-width {
-  min-width: 225px;
+div.general-width {
+  width: 275px;
   position: relative;
 }
 
-div.master-volume-height {
+div.general-height {
   min-height: 268px;
 }
 
