--- a/client/src/app/oscillator/oscillator.component.scss
+++ b/client/src/app/oscillator/oscillator.component.scss
@@ -1,3 +1,7 @@
+div.group-container {
+  min-height: 938px;
+}
+
 div.row {
   display: flex;
   flex-direction: row;
