--- a/client/src/app/phasor/phasor-component.scss
+++ b/client/src/app/phasor/phasor-component.scss
@@ -6,5 +6,5 @@
  }
 
 div.phasor-width {
-  min-width: 580px;
+  width: 580px;
 }
