--- a/client/src/app/reverb-component/reverb-component.scss
+++ b/client/src/app/reverb-component/reverb-component.scss
@@ -2,5 +2,5 @@
   flex-direction: row;
 }
 div.reverb-width {
-  min-width: 810px;
+  width: 810px;
 }
